--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
-<body>
+<body style="background-color: rgb(235, 235, 243);">
 
   <div class="container">
     <div class="row">
