--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -14,11 +14,28 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md-12 jumbotron text-center" id = "dashboard" style ="background: url('../Images/Bellybuttonart.jpg') no-repeat center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover;">
-          <h1 style="color:rgb(950, 900, 950)"><strong>Belly Button Biodiversity Dashboard</strong></h1>
-          <h2 style="color:rgb(55, 950, 50)"><strong>Use the interactive charts below to explore the dataset</strong></h2>
+        <div
+          class="col-md-12 jumbotron text-center"
+          id="dashboard"
+          style="
+            background: url('../Images/Bellybuttonart.jpg') no-repeat center;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+          "
+        >
+          <h1 style="color: rgb(950, 900, 950)">
+            <strong>Belly Button Biodiversity Dashboard</strong>
+          </h1>
+          <h2 style="color: rgb(55, 950, 50)">
+            <strong
+              >Use the interactive charts below to explore the dataset</strong
+            >
+          </h2>
         </div>
       </div>
+
       <div class="row">
         <div class="col-md-2">
           <div class="well">
@@ -35,16 +52,20 @@
             <div id="sample-metadata" class="panel-body"></div>
           </div>
         </div>
-        <div class="col-md-5">
-          <div id="bar"></div>
-        </div>
-        <div class="col-md-5">
-          <div id="gauge"></div>
+        <div class="container-fluid">
+          <div class="col-md-5">
+            <div id="bar"></div>
+          </div>
+          <div class="col-md-5">
+            <div id="gauge"></div>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div id="bubble" style="color-scheme: dark"></div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+            <div id="bubble" style="color-scheme: dark"></div>
+          </div>
         </div>
       </div>
     </div>
