Moving Index and associated files outside of startercode

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           class="col-md-12 jumbotron text-center"
           id="dashboard"
           style="
-            background: url('../Images/Bellybuttonart.jpg') no-repeat center;
+            background: url('/Images/Bellybuttonart.jpg') no-repeat center;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -72,7 +72,7 @@
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="./static/js/app.js"></script>
-    <script src="./static/js/bonus.js"></script>
+    <script src="app.js"></script>
+    <!-- <script src="static/js/bonus.js"></script> -->
   </body>
 </html>
