Working on Heading Background

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           class="col-md-12 jumbotron text-center"
           id="dashboard"
           style="
-            background: url('/Images/Bellybuttonart.jpg') no-repeat center;
+            background: url('Images/Bellybuttonart.jpg') no-repeat center;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
